tests/errors/enum-payload-too-wide.ari
struct Pair {
  left: i64,
  right: i64,
}

enum Wide {
  Value(Pair),
}

fn main() -> i64 {
  return 0;
}
